--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -30,10 +30,14 @@
     font-weight: 700;
     font-size: 2.6rem;
     margin: 0px;
+    text-decoration: none;
+    color: white;
 }
 
 #navbar a {
     cursor: pointer;
+    text-decoration: none;
+    color: white;
 }
 
 #navbar a:hover {
