--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,29 +1,43 @@
 /* Styles for the Navigation Bar, identified with the id: navbar */
 
-#navbar {
+header {
     position: fixed;
     top: 0;
     display: flex;
+    flex-direction: column;
+    gap: 25px;
+    z-index: 20;
+    margin: 1.5em;
+    width: calc(100vw - 3em);
+}
+
+#navbar {
+    padding: 20px 40px;
+    display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 1.5em;
-    padding: 1em 2em;
-    width: calc(100vw - 3em - 4em);
-    background-color: rgba(155, 155, 155, 0.7);
-    backdrop-filter: blur(8px);
-    box-shadow: 0 0 50px #ccc;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    /* box-shadow: 0 0 10px; */
     border-radius: 25px;
     color: white;
-    z-index: 20;
 }
 
 
-#navbar #tabs {
+#navbar .tabs {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 35px;
     margin-left: auto;
     font-size: 1.7em;
+}
+
+#navbar .mobile-hamburger {
+    display: none;
+}
+
+.mobile-tabs {
+    display: none;
 }
 
 #navbar h1 {
@@ -48,6 +62,51 @@
 #navbar .button {
     padding: 12px 20px;
     border-radius: 15px;
-    background-color: darkgray;
+    background-color: rgba(19,49,92, 1);
     cursor: pointer;
+}
+
+#navbar .button:hover {
+    background-color: rgba(19,49,92, 0.7);    
+    transition: 0.3s background-color;
+}
+
+/* === MOBILE RESPONSIVE ===*/
+@media screen and (max-width: 768px) {
+    #navbar {
+        border-radius: 20px;
+    }
+
+    #navbar .mobile-hamburger {
+        display: block;
+        height: 2.6rem;
+        width: auto;
+        margin-left: auto;
+    }
+    
+    .mobile-tabs {
+        /* display: flex; */
+        flex-direction: column;
+        gap: 30px;
+        padding: 20px 40px;
+        color: white;
+        font-size: 1.7em;
+
+        background-color: rgba(255, 255, 255, 0.3);
+        backdrop-filter: blur(10px); 
+        border-radius: 20px;   
+    }
+
+    .mobile-tabs a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .mobile-tabs .button {
+        font-weight: 700;
+    }
+
+    #navbar .tabs {
+        display: none;
+    }
 }
