--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -1,5 +1,3 @@
-@import url("./styles.css");
-
 /* Global Styles */
 body {
     font-family: 'Roboto', sans-serif;
@@ -26,11 +24,11 @@ body::-webkit-scrollbar{
 
 #hero-section .title {
     margin: 0px;
-    font-size: var(--hero-title-fs);
+    font-size: 100px;
 }
 
 #hero-section .desc {
-    font-size: var(--hero-desc-fs);
+    font-size: 1.6rem;
 }
 
 /* Price Tiers */
@@ -40,6 +38,7 @@ body::-webkit-scrollbar{
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 
     position: relative;
@@ -48,10 +47,10 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .tier {
-    max-width: 28%;
-    box-shadow: 0 0 50px #ccc;
+    max-width: 27%;
+    box-shadow: 0 0 20px #777;
     background-color: white;
-    padding: 20px 30px 30px 20px;
+    padding: 30px;
     border-radius: 15px;
 }
 
@@ -88,10 +87,29 @@ body::-webkit-scrollbar{
     width: 100%;
 }
 
-#price-tiers .tier .action-btn:hover {
-    
+/* === RESPONSIVE UI ===*/
+@media only screen and (max-width: 1200px) {
+    #price-tiers {
+        gap: 50px;
+        top: -320px;
+    }
+    #price-tiers .tier {
+        max-width: 90%;
+        box-shadow: 0 0 20px #777;
+        background-color: white;
+        padding: 30px;
+        border-radius: 15px;
+    }
 }
 
-#price-tiers .tier .tier-info {
+@media only screen and (max-width: 768px) {  
+    /* Hero Section */
+    #hero-section .title {
+        margin: 0px;
+        font-size: 60px;
+    }
 
+    #hero-section .desc {
+        font-size: 1.6rem;
+    }
 }
