--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,13 +1,39 @@
 /* === Styles for the Footer === */
 
-#footer {
+footer {
+    bottom: 0;
+    padding: 30px 40px;
+    max-width: 100vw;
 
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-#footer .title {
-
+footer .left {
+    margin: 0;
 }
 
-#footer .location {
-    
+footer .title {
+    font-size: 1.9rem;
+    margin: 0;
+}
+
+footer .location {
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+footer .social-media-icons {
+    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+footer .social-media-icons .icon {
+    width: 35px;
+    height: auto;
 }
