--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,16 @@ body::-webkit-scrollbar{
     display: none;
 }
 
+a {
+    text-decoration: none;
+}
+
+/* Variables */
+:root {
+    --subtitle-size: 50px;
+    --sub-subtitle-size: 30px;
+}
+
 /* Return to Top Button */
 #goto-top {
     position: fixed;
@@ -73,6 +83,14 @@ body::-webkit-scrollbar{
     border-radius: 50px;
     font-size: 1.7rem;
     cursor: pointer;
+
+    scale: 1;
+    transition: 0.2s scale;
+}
+
+#hero-section .header button:hover {
+    scale: 1.05;
+    transition: 0.2s scale;
 }
 
 #hero-section .down-arrow {
@@ -85,19 +103,110 @@ body::-webkit-scrollbar{
 /* Who We Are Section */
 #whoweare {
     margin: 3% 5%;
+    display: flex;
+    flex-direction: row;
+    gap: 4%;
 }
 
 #whoweare .title {
-    font-size: 60px;
+    font-size: var(--subtitle-size);
     margin: 0;
 }
 
 #whoweare .desc {
-    font-size: 1.5rem;
+    margin-top: 10px;
+    font-size: 1.4rem;
+}
+
+#whoweare img {
+    object-fit: fit;
+    width: 40%;
+    height: auto;
+}
+
+/* Features Section */
+#features {
+    background-color: #ebecf8;
+    padding: 3% 5%;
+}
+
+#features .title {
+    font-size: var(--subtitle-size);
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+#features .main-features {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#features .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-basis: 30%;
+}
+
+#features .feature img {
+    max-width: 20vw;
+    height: auto;
+}
+
+#features .feature .name {
+    font-weight: 700;
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+#features .feature .desc {
+    margin: 0;
+    font-size: 1.1rem;
+    margin-bottom: 0;
+}
+
+#features .feature-divider {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    border: 0.5px solid #d9dbf1;
+}
+
+#features .additional-features .subtitle {
+    font-size: var(--sub-subtitle-size);
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+#features .additional-features .add-features-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+#features .additional-features .add-features-section p {
+    font-size: 1.1rem;
+    margin: 0;
+    flex-basis: 25%;
+}
+
+#features .disclaimer {
+    margin-top: 3%;
+    font-size: 0.9rem;
+    margin-bottom: 0;
 }
 
 /* === RESPONSIVE UI ===*/
 @media only screen and (max-width: 1100px) {
+    :root {
+        --subtitle-size: 40px;
+        --sub-subtitle-size: 25px;
+    }
+    
     /* Hero Section */
     #hero-section .header .title {
         font-size: 70px;
@@ -122,7 +231,12 @@ body::-webkit-scrollbar{
     }
 }
 
-@media only screen and (max-width: 768px) {  
+@media only screen and (max-width: 768px) { 
+    :root {
+        --subtitle-size: 35px;
+        --sub-subtitle-size: 25px;
+    }
+    
     /* Hero Section */  
     #hero-section .header {
         margin-left: 10%;
@@ -144,7 +258,7 @@ body::-webkit-scrollbar{
 
     /* Who We Are Section */
     #whoweare {
-        margin: 10% 5%;
+        margin: 6% 5%;
     }
     
     #whoweare .title {
@@ -152,6 +266,50 @@ body::-webkit-scrollbar{
     }
     
     #whoweare .desc {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
+    }
+
+    #whoweare img {
+        display: none;
+    }
+
+    /* Features Section */
+    #features {
+        padding: 6% 5%;
+    }
+
+    #features .main-features {
+        gap: 20px;
+    }
+
+    #features .feature {
+        flex-basis: 45%;
+    }
+
+    #features .feature img {
+        max-width: 25vw;
+    }
+
+    #features .additional-features .add-features-section p {
+        flex-basis: 40%;
+    }
+
+    #features .disclaimer {
+        margin-top: 6%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    /* Features Section */
+    #features .main-features {
+        gap: 35px;
+    }
+
+    #features .feature img {
+        max-width: 50vw;
+    }
+
+    #features .feature {
+        flex-basis: 100%;
     }
 }
