feat: working carousel

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -24,7 +24,7 @@ header {
 }
 
 .colorChangeAdd {
-    background-color: #4e6585 !important;
+    background-color: #40434F !important;
     transition: 0.3s background-color;
 }
 
