--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -24,12 +24,12 @@ body::-webkit-scrollbar{
 
 #hero-section .title {
     margin: 0px 10%;
-    font-size: 70px;
+    font-size: 75px;
 }
 
 #hero-section .desc {
     margin: 5px 0px;
-    font-size: 1.5rem;
+    font-size: 30px;
 }
 
 /* Price Tiers */
@@ -39,12 +39,12 @@ body::-webkit-scrollbar{
 
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
     justify-content: space-between;
 
     position: relative;
     top: -300px;
     z-index: 5;
+    font-size: 25px;
 }
 
 #price-tiers .tier {
@@ -64,24 +64,24 @@ body::-webkit-scrollbar{
 
 #price-tiers .tier .name {
     margin: 0px;
-    font-size: 2rem;
+    font-size: 1.8em;
 }
 
 
 #price-tiers .tier .desc {
     margin: 12px 0px; 
-    font-size: 1.1rem;
+    font-size:0.8em;
 }
 
 #price-tiers .tier .price {
     margin: 0px;
     margin-top: 10px;
-    font-size: 3rem;
+    font-size: 1.8em;
 }
 
 #price-tiers .tier .price-per {
     margin: 0px;
-    font-size: 1.3rem;
+    font-size: 0.5em;
     font-weight: 400;
     color: #777;
 }
@@ -92,7 +92,7 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .features .feature {
-    font-size: 1.1rem;
+    font-size: 0.85em;
     display: inline-flex;
     gap: 10px;
     margin: 0;
@@ -105,9 +105,10 @@ body::-webkit-scrollbar{
 }
 
 #price-tiers .tier .action-btn {
+    margin-top: auto;
     padding: 15px;
     border: 0px;
-    font-size: 20px;
+    font-size: 0.8em;
     font-weight: 700;
     border-radius: 15px;
     width: 100%;
