docs: features, design process

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,6 +1,6 @@
 /* Styles for the Navigation Bar, identified with the id: navbar */
 :root {
-    --darkmode-colour: #616365;
+    --darkmode-colour: #1A579E;
 }
 
 header {
