--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ body::-webkit-scrollbar{
 /* Return to Top Button */
 #goto-top {
     position: fixed;
-    bottom: 10vh;
+    bottom: 3%;
     right: 3%;
 
     padding: 10px;
@@ -65,6 +65,17 @@ body::-webkit-scrollbar{
     margin: 0 15%;
     text-align: center;
     align-items: center;
+}
+
+#hero-section .title-cursor {
+    animation: blink 0.7s infinite alternate;
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    40% { opacity: 1; }
+    60% { opacity: 0; }
+    100% { opacity: 0; }
 }
 
 #hero-section .header .title {
@@ -227,7 +238,7 @@ body::-webkit-scrollbar{
 }
 
 #testimonials .carousel-slider .carousel-icon {
-    width: 30px;
+    width: 50px;
     height: auto;
     cursor: pointer;
 }
@@ -275,9 +286,10 @@ body::-webkit-scrollbar{
 }
 
 #testimonials .testimonial-companies {
-    margin: 4% 5%;
+    margin: 4% 25%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 40px;
 }
 
@@ -433,6 +445,14 @@ body::-webkit-scrollbar{
         width: 60vw;
     }
 
+    #testimonials .testimonial-companies {
+        margin: 4% 10%;
+        margin-top: 40px;
+    }
+
+    #testimonials .testimonial-img {
+        height: 35px;
+    }
 
     /* Contact Us Section */
     #contact-faq label {
@@ -532,6 +552,17 @@ body::-webkit-scrollbar{
 
     #features .disclaimer {
         margin-top: 6%;
+    }
+
+    /* Testimonials Section */
+    #testimonials .testimonial-img {
+        height: 30px;
+    }
+
+    /* Contact Us Section */
+    #contact-faq {
+        margin: 6% 5%;
+        font-size: 20px;
     }
 }
 
