--- a/styles/domain.css
+++ b/styles/domain.css
@@ -7,3 +7,56 @@ body {
 body::-webkit-scrollbar{
     display: none;
 }
+
+.margin0 {
+    margin: 0;
+}
+
+/* Hero Section */
+#hero-section {
+    width: 100vw;
+    height: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 25px;
+}
+
+#hero-section .title-desc {
+    margin: 2% 5%;
+    text-align: left;
+}
+
+#hero-section h1 {
+    font-size: 2.5em;
+    margin-bottom: 5px;
+}
+
+#hero-section p {
+    margin-top: 0;
+    width: 80%;
+}
+
+#hero-section form {
+    margin: 1% 5%;
+    display: flex;
+    align-items: center;
+}
+
+#hero-section input {
+    padding: 0.8em;
+    border: 1px solid black;
+    border-radius: 15px 0px 0px 15px;
+    font-size: 0.9em;
+    width: 45%;
+}
+
+#hero-section button {
+    height: 100%;
+    border-radius: 0px 15px 15px 0px;
+    border: 1px solid black;
+    font-size: 0.9em;
+    padding: 0px 20px;
+}
+
+/* Domains Section */
