--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -121,6 +121,7 @@ body::-webkit-scrollbar{
     margin-left: auto;
     height: 23px;
     width: auto;
+    stroke-width: 3;
 }
 
 /* Comparison Table */
@@ -173,6 +174,7 @@ body::-webkit-scrollbar{
     width: auto;
     height: 1em;
     color: #777;
+    stroke-width: 3;
 }
 
 #feature-comparison .check {
