--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -1,4 +1,8 @@
 /* Global Styles */
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0px;
@@ -19,7 +23,6 @@ body::-webkit-scrollbar{
     justify-content: center;
     width: 100vw;
     height: 700px;
-    /* background-color: burlywood; */
 }
 
 #hero-section .title {
