--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,26 +23,10 @@ body::-webkit-scrollbar{
 /* Titles and Descriptions */
 .title {
     font-size: var(--subtitle-size) !important;
+}
+
+.margin0 {
     margin: 0;
-}
-
-/* Return to Top Button */
-#goto-top {
-    position: fixed;
-    bottom: 3%;
-    right: 3%;
-
-    padding: 10px;
-    border-radius: 100%;
-    border: 0;
-    background-color: #13315C;
-    color: white;
-    cursor: pointer;
-}
-
-#goto-top .icon {
-    width: 50px;
-    height: auto;
 }
 
 /* Hero Section */
@@ -176,9 +160,7 @@ body::-webkit-scrollbar{
 }
 
 #features .feature .desc {
-    margin: 0;
     font-size: 0.9em !important;
-    margin-bottom: 0;
 }
 
 #features .feature-divider {
@@ -203,7 +185,6 @@ body::-webkit-scrollbar{
 
 #features .additional-features .add-features-section p {
     font-size: 0.9em;
-    margin: 0;
     flex-basis: 25%;
 }
 
@@ -278,7 +259,6 @@ body::-webkit-scrollbar{
     height: 15px;
     border-radius: 100%;
     background-color: lightslategray;
-    margin: 0;
 }
 
 #testimonials #active {
@@ -373,10 +353,6 @@ body::-webkit-scrollbar{
     padding: 10px 0px;
 }
 
-#contact-faq .faq-container p {    
-    margin: 0;
-}
-
 #contact-faq .faq-container-header {
     display: flex;
     flex-direction: row;
@@ -392,7 +368,6 @@ body::-webkit-scrollbar{
 }
 
 #contact-faq .faq-container-desc {
-    margin: 0;
     font-size: 0.9em;
 }
 
